--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-My Page
+Still under construction...
+Visit the first part of the course: <a href=AmigojapanProgramming101.html>Programming 101 in Scratch</a>
